# kibana-mcp-server

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  http.rs  kibana.rs  main.rs  mcp.rs  tools.rs
