[package]
name = "kibana-mcp-server"
version = "0.1.1"
edition = "2021"
description = "Kibana/Elasticsearch MCP server for log access"
license = "MIT"
repository = "https://github.com/nizovtsevnv/kibana-mcp-server"
exclude = [".cargo/", ".claude/", ".github/", ".envrc", "AGENTS.md", "flake.nix", "flake.lock", "scripts/"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "io-util", "io-std"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = "z"
